k8s/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-qa
  namespace: qa
spec:
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
